css修正&dataのアロー関数表記を修正

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <section class="todoapp">
         <header class="header">
           <h1>ToDo App</h1>
-        <input class="newTodo"
+        <input class="new-todo"
           placeholder="タスクを入力してください"
           v-model="newTodo"
           v-on:keypress.enter="addTodo">
