メソッド名を修正

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <footer class="footer" v-show="todos.length" v-cloak>
           <span class="todo-count">
-            残り<strong>{{ remaining }}</strong>タスク
+            残り<strong>{{ activeTodoCount }}</strong>タスク
           </span>
         </footer>
       </section>
