--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       <link href="css/styles.css" rel="stylesheet">
       <link href="https://unpkg.com/todomvc-app-css@2.4.0/index.css" rel="stylesheet">
       <script src="https://unpkg.com/vue@next"></script>
+      <script src="https://unpkg.com/uuid@latest/dist/umd/uuidv4.min.js"></script>
+      </script>
   </head>
   <body>
     <div id="app">
